--- a/client/public/missionView.html
+++ b/client/public/missionView.html
@@ -1,5 +1,5 @@
 <h1>Mission</h1>
-<div id="missionEdit">
+<div>
 
-<p><i>Eye of the Storm</i>, the official student newspaper of TABC, is a space for students to both present their opinions and report on topics that are relevant to the TABC community. Students have the opportunity to work as individuals reporters and to collaborate with a team of writers and editors dedicated to the art of journalism.</p>
+<p><em>Eye of the Storm</em>, the official student newspaper of TABC, is a space for students to both present their opinions and report on topics that are relevant to the TABC community. Students have the opportunity to work as individual reporters and to collaborate with a team of writers and editors dedicated to the art of journalism.</p>
 </div>
